Closed
Bug 1004327
Opened 12 years ago
Closed 12 years ago
input type=number limited to 3 digits of precision
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
VERIFIED
FIXED
mozilla32
People
(Reporter: owen, Assigned: jwatt)
References
Details
Attachments
(2 files)
|
202 bytes,
text/html
|
Details | |
|
3.66 KB,
patch
|
bzbarsky
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:29.0) Gecko/20100101 Firefox/29.0 (Beta/Release)
Build ID: 20140428193603
Steps to reproduce:
See: http://jsfiddle.net/LAk5C/
Create an Input control of type=number with greater than 3 decimal digits step & value
<input type="number" name="test" step="0.0001" value="1.1111">
Actual results:
Only shows 3 digits of precision, regardless of step or initial value precision:
Above example shows: 1.111
Internal value steps correctly but display changes only every 10 steps because of rounding to 3 decimal places
Expected results:
Not sure what the HTML5 spec says but I think if display value must be rounded then it should never be truncated to a lower precision than the step value.
Updated•12 years ago
|
Status: UNCONFIRMED → NEW
Component: DOM: Core & HTML → Layout: Form Controls
Ever confirmed: true
Updated•12 years ago
|
OS: Linux → All
Hardware: x86_64 → All
Version: 29 Branch → Trunk
Comment 1•12 years ago
|
||
| Assignee | ||
Comment 2•12 years ago
|
||
Assignee: nobody → jwatt
Attachment #8415826 -
Flags: review?(bzbarsky)
Comment 3•12 years ago
|
||
Comment on attachment 8415826 [details] [diff] [review]
patch
r=me
Attachment #8415826 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 4•12 years ago
|
||
Comment 5•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Comment 6•12 years ago
|
||
Will this be uplifted to Aurora & Beta?
| Assignee | ||
Comment 7•12 years ago
|
||
Comment on attachment 8415826 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 844744
User impact if declined: some site's use of <input type=number> will be broken
Testing completed (on m-c, etc.): landed on m-i
Risk to taking this patch (and alternatives if risky): very low
String or IDL/UUID changes made by this patch: none
Attachment #8415826 -
Flags: approval-mozilla-beta?
Attachment #8415826 -
Flags: approval-mozilla-aurora?
Updated•12 years ago
|
Updated•12 years ago
|
Attachment #8415826 -
Flags: approval-mozilla-beta?
Attachment #8415826 -
Flags: approval-mozilla-beta+
Attachment #8415826 -
Flags: approval-mozilla-aurora?
Attachment #8415826 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Comment 8•12 years ago
|
||
Comment 9•12 years ago
|
||
Updated•12 years ago
|
status-b2g-v1.4:
--- → fixed
status-b2g-v2.0:
--- → fixed
Updated•12 years ago
|
Whiteboard: verifyme
Comment 10•12 years ago
|
||
Verified as fixed on Firefox 30 beta 2 (20140505140302), Aurora 31.0a2 (20140505004003) and Nightly 32.0a1 (20140505030202) under Win 7 64-bit, Ubuntu 12.10 32-bit and Mac OSX 10.7.5
Status: RESOLVED → VERIFIED
QA Contact: petruta.rasa
Whiteboard: verifyme
Comment 11•12 years ago
|
||
Chances are probably very slim and maybe it's already too late, but I give it a try anyway.
There is going to be a maintenance update of Firefox 29. Any chance to get this included?
Comment 12•12 years ago
|
||
It is indeed too late, sorry. The next version is not too far anyway.
You need to log in
before you can comment on or make changes to this bug.
Description
•