Bug 1004327 - Don't limit the number of significant fractional digits for <input type=number>. r=bz, a=sylvestre